main.css
html, body {
    margin: 0;
    overflow: hidden;
}

body {
    font-family: sans-serif;
}

svg {
    shape-rendering: crispEdges;
    text-anchor: middle;
    dominant-baseline: middle;
    position: absolute;
    left: 50%;
    top:  50%;
    width: 50vw;
    height: auto;
    max-height: 80vh;
    transform: translate(-50%, -50%);
}

